# COINjecture1337-REFACTOR2.0

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CID_CATALOG_STATUS.md  CODEOWNERS  COMPLETION_STATUS.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  DISTRIBUTION.md  DOWNLOAD_PACKAGES.md  EQUILIBRIUM_ANALYSIS_RESULTS.md  EQUILIBRIUM_GOSSIP_IMPLEMENTATION.md  LICENSE  NETWORK_A_TESTING_GUIDE.md  PRODUCTION_READINESS.md  PROJECT_STRUCTURE.md  Procfile  README.md  README_REFACTOR.md  REFACTOR_ARCHITECTURE.md  REFACTOR_PLAN.md  RELEASE_v3.15.0_SUMMARY.md  SECURITY_AUDIT.md  SERVER_RESTART_INSTRUCTIONS.md  SSL_FIX_SUMMARY.md  TEST_RESULTS.md  TEST_SUITE_SUMMARY.md  VERSION  backend_migration.sql  build_v3_15_0_packages.py  check_droplet.sh  config.json  consensus_service_memory_optimized.py  consensus_service_objects.py  create_droplet.sh  deploy.sh  fix_cache_manager.py  fix_cache_sync.sh  (+5 more)
.github/: CODEOWNERS
.github/workflows/: ci.yml  parity.yml
cli-packages/: README.md
cli-packages/auto-launch/: install.sh
cli-packages/shared/: build_packages.py
config/: miner_config.json  miner_wallet.json
docs/: API.md  CID_FIX_STATUS.md  CONSENSUS.md  FFI_INTEGRATION.md  FINANCIAL_PRIMITIVES.md  MANIFESTO.md  MIGRATION_V4.md  TESTNET_DEPLOYMENT_GUIDE.md  TESTNET_MIGRATION_PLAN.md  V4_ROADMAP.md  devnet.md  testing.md
docs/blockchain/: cli.md  consensus.md  core.md  network.md  node.md  pow.md  storage.md
docs/guides/: API.md  ARCHITECTURE.md  AUTHENTICATION_GUIDE.md  BOUNTY_WALLET_LOADING.md  CLI_DOWNLOAD_GUIDE.md  CLOUDFLARE_HTTPS.md  CLOUDFLARE_SETUP.md  DEPLOYMENT.md  DISTRIBUTION.md  DOWNLOAD_PACKAGES.md  DYNAMIC_TOKENOMICS.md  FRONTEND_S3_UPDATE.md  HTTPS_DEPLOYMENT_CHECKLIST.md  INSTALL.md  MAJOR_MILESTONES.md  P2P_DISCOVERY.md  PRODUCTION_API_SETUP.md  PRODUCTION_READY.md  QUICK_REFERENCE.md  QUICK_SSL_SETUP.md  USER_GUIDE.md
go/: go.mod  go.sum
go/scripts/: test-multi-validator.md
keys/network-a/: validator1.priv  validator1.pub  validator1.yaml  (+6 more)
rust/coinjecture-core/: Cargo.toml  README.md
rust/coinjecture-core/golden/: README.md  commitments_v4_0_0.json  genesis.json  genesis_header_v4_0_0.json  genesis_v4_0_0.json  hashes_v4_0_0.txt  headers.json  headers_v4_0_0.json  merkle_v4_0_0.json
rust/coinjecture-core/src/: codec.rs  commitment.rs  errors.rs  ffi.rs  hash.rs  lib.rs  merkle.rs  python.rs  transaction.rs  types.rs  verify.rs
rust/coinjecture-core/tests/: golden_tests.rs
rust/network-b/: Cargo.toml  TEST_QUICK_START.md  TRANSACTION_TEST_GUIDE.md  clean-testnet.bat  test-faucet-node.ps1  test-node1.bat  test-node2.bat  test-node3.bat
rust/network-b-substrate-archive/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
rust/network-b-substrate-archive/node/: Cargo.toml
rust/network-b-substrate-archive/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
rust/network-b-substrate-archive/pallets/beans/: Cargo.toml
rust/network-b-substrate-archive/pallets/beans/src/: lib.rs
rust/network-b-substrate-archive/runtime/: Cargo.toml
rust/network-b-substrate-archive/runtime/src/: lib.rs
rust/network-b/consensus/src/: miner.rs
rust/network-b/core/src/: block.rs  crypto.rs  transaction.rs
rust/network-b/mempool/: Cargo.toml
rust/network-b/mempool/src/: lib.rs  marketplace.rs  mining_incentives.rs  pool.rs
rust/network-b/network/: Cargo.toml
rust/network-b/network/src/: protocol.rs
rust/network-b/node/: Cargo.toml
rust/network-b/node/src/: chain.rs  config.rs  genesis.rs  main.rs  service.rs  validator.rs
rust/network-b/rpc/src/: server.rs
rust/network-b/state/: Cargo.toml
rust/network-b/state/src/: accounts.rs  channels.rs  dimensional_pools.rs  escrows.rs  lib.rs  timelocks.rs  trustlines.rs
rust/network-b/testnet/node1/chain/: db
rust/network-b/testnet/node2/chain/: db  snap.000000000000030D
rust/network-b/testnet/node2/state/: db  snap.000000000000009C
rust/network-b/tokenomics/src/: distributor.rs  lib.rs
rust/network-b/wallet/: Cargo.toml
rust/network-b/wallet/src/: keystore.rs  main.rs  rpc_client.rs
rust/network-b/wallet/src/commands/: account.rs  marketplace.rs  mod.rs  transaction.rs
scripts/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  add_blocks_to_consensus.py  add_mining_endpoint.py  aggressive_network_scan.py  analyze_existing_equilibrium.py  apply_conjecture_final.py  audit_and_add_blocks.py  auto_deploy_on_connection.py  auto_monitor_equilibrium.sh  automatic_block_processor.py  build_all_packages.sh  bypass_consensus_validation.py  capture_network_blocks.py  catalog_all_cids.py  catalog_and_regenerate_cids.py  check_actual_miners.py  check_blockchain_status.py  check_db_status.py  check_regeneration_readiness.py  coinjecture-cid-migration.service  coinjecture-consensus-monitor.service  coinjecture_ssl_bypass_client.py  complete_droplet_fix.sh  complete_power_cycle_deployment.sh  complete_ssl_setup.sh  complete_system_reset.sh  connection_triggered_deploy.sh  consensus_health_monitor.py  copy_blockchain_to_server.sh  create_deployment_package.sh  create_mock_proof_bundles.py  create_valid_genesis.py  debug_frontend_issue.py  delete_old_code.sh  delete_old_databases.sh  deploy_complete_production.sh  deploy_consensus_fix.sh  deploy_cors_fix.sh  deploy_database_fix_to_droplet.sh  (+120 more)
src/: __init__.py  cli.py  consensus.py  consensus_service.py  consensus_wrapper.py  metrics_engine.py  network.py  network_integration_service.py  network_sync_service.py  node.py  p2p_discovery.py  pow.py  storage.py  unified_consensus_service.py
tests/: __init__.py  conftest.py  production_test_plan.md  run_all_tests.sh  test_consensus_wrapper.py  test_network_equilibrium.py  test_network_simulation.py  test_network_stress.py
web/: API.README.md  README-MODULAR.md  README.md  api-docs.html  app.js  bucket-policy.json  clear-cache.js  cors.json  deploy-s3-simple.sh  deploy-s3.sh  download.html  explorer.html  index-clean-final.html  index-fixed.html  index.html  metrics.html  mining.html  proof.html  static-test.html  style.css  test-simple.html
(+146 files in other folders)
