[workspace]
resolver = "2"

members = [
    "node",
    "runtime",
    "pallets/beans",
]

[workspace.package]
authors = ["Quigles1337 <adz@alphx.io>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Quigles1337/COINjecture1337-REFACTOR"
version = "4.5.0"

[workspace.dependencies]
# Substrate primitives (polkadot-stable2412 - December 2024 Stable Release)
sp-core = { version = "37", default-features = false }
sp-runtime = { version = "43", default-features = false }
sp-std = { version = "14", default-features = false }
sp-io = { version = "42", default-features = false }
sp-consensus-aura = { version = "0.44", default-features = false }
sp-consensus-grandpa = { version = "25", default-features = false }
sp-api = { version = "38", default-features = false }
sp-block-builder = { version = "38", default-features = false }
sp-inherents = { version = "38", default-features = false }
sp-offchain = { version = "38", default-features = false }
sp-session = { version = "40", default-features = false }
sp-transaction-pool = { version = "38", default-features = false }
sp-version = { version = "41", default-features = false }
sp-timestamp = { version = "38", default-features = false }
sp-genesis-builder = { version = "0.19", default-features = false }

# FRAME dependencies (polkadot-stable2412 - December 2024 Stable Release)
frame-support = { version = "42", default-features = false }
frame-system = { version = "42", default-features = false }
frame-executive = { version = "42", default-features = false }
frame-benchmarking = { version = "42", default-features = false }
pallet-aura = { version = "41", default-features = false }
pallet-balances = { version = "43", default-features = false }
pallet-grandpa = { version = "42", default-features = false }
pallet-sudo = { version = "42", default-features = false }
pallet-timestamp = { version = "41", default-features = false }
pallet-transaction-payment = { version = "42", default-features = false }

# Client dependencies (polkadot-stable2412 - December 2024 Stable Release)
sc-cli = { version = "0.50" }
sc-executor = { version = "0.44" }
sc-network = { version = "0.48" }
sc-service = { version = "0.49" }
sc-telemetry = { version = "27" }
sc-transaction-pool = { version = "41" }
sc-transaction-pool-api = { version = "41" }
sc-consensus-aura = { version = "0.48" }
sc-consensus = { version = "0.47" }
sc-consensus-grandpa = { version = "0.33" }
sc-client-api = { version = "41" }
sc-basic-authorship = { version = "0.48" }

# Node dependencies
frame-benchmarking-cli = { version = "46" }
sc-rpc-api = { version = "0.47" }

# Serialization
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
scale-info = { version = "2.11.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Utility
clap = { version = "4.5" }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
