[workspace]
resolver = "2"

members = [
    "core",
    "consensus",
    "network",
    "state",
    "mempool",
    "rpc",
    "tokenomics",
    "node",
    "wallet",
]

[workspace.package]
authors = ["Quigles1337 <adz@alphx.io>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Quigles1337/COINjecture1337-REFACTOR"
version = "4.5.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Networking
libp2p = { version = "0.54", features = ["tcp", "tokio", "noise", "yamux", "gossipsub", "mdns", "kad", "identify", "macros"] }

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = "2.0"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database (pure Rust, no C dependencies)
sled = "0.34"

# Math & Problem Solving
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
bs58 = "0.5"

# Time
chrono = "0.4"

# RPC
jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
