[package]
name = "network-b-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Network B Node - Substrate with $BEANS"

[[bin]]
name = "network-b"
path = "src/main.rs"

[dependencies]
clap.workspace = true
futures.workspace = true
serde_json.workspace = true
serde = { workspace = true }

# Substrate
sc-cli.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-service.workspace = true
sc-telemetry.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true
sc-consensus-aura.workspace = true
sc-consensus.workspace = true
sc-consensus-grandpa.workspace = true
sc-client-api.workspace = true
sc-basic-authorship.workspace = true
sc-rpc-api.workspace = true

sp-core.workspace = true
sp-runtime.workspace = true
sp-consensus-aura.workspace = true
sp-consensus-grandpa.workspace = true
sp-inherents.workspace = true
sp-timestamp.workspace = true
sp-blockchain = "41"
sp-keystore = "0.44"

frame-system.workspace = true
frame-benchmarking.workspace = true
substrate-frame-rpc-system = "42"
pallet-transaction-payment-rpc = "44"
jsonrpsee = { version = "0.24", features = ["server"] }

# Local
network-b-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = "11"
