[package]
name = "coinject-state"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
coinject-core = { path = "../core" }
sled.workspace = true
serde.workspace = true
bincode.workspace = true
chrono.workspace = true
